--- a/sass/elements/game/_searchFriends.scss
+++ b/sass/elements/game/_searchFriends.scss
@@ -13,7 +13,6 @@
             background: rgba(255, 255, 255, 0.5);
             padding: 10px;
         }
-    
     }
     &__searchBar {
         display: flex;
@@ -22,6 +21,10 @@
         height: 50px;
         box-sizing: border-box;
         padding: 10px 0;
+        @include laptopL {
+            height: 42px;
+            padding: 7px 0;
+        }
     }
     &__searchIcon {
         height: 112%;
@@ -62,16 +65,16 @@
         border-radius: 15px;
         position: relative;
         z-index: 0;
-        &::after{
-            content: '';
-            display: block;
-            height: 100%;
-            width: 40px;
-            z-index: -1;
-            position: absolute;
+        &::after {
             right: -10px;
+            @include arrow('right');
             background: $color-white;
-            clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
+            @include desktopS {
+                right: -9px;
+            }
+            @include laptopL {
+                right: -11px;
+            }
         }
         img {
             margin-left: -2px;
@@ -82,8 +85,11 @@
             font-size: 1.438rem;
             letter-spacing: 0.063rem;
         }
-
-     
+        @include laptopL{
+            width: 89%;
+            height: 25px;
+        }
+       
     }
     &__nick {
         margin-left: 20px;
@@ -95,11 +101,11 @@
         border-radius: 15px;
         position: relative;
         transition: 0.2s;
-        &-selected{
+        &-selected {
             color: $color-blue;
             transition: 0.2s;
             color: $color-blue;
-            &::after{
+            &::after {
                 background: $color-blue !important;
             }
         }
@@ -108,33 +114,33 @@
             font-weight: bold;
             font-size: 1.438rem;
             letter-spacing: 0.063rem;
+            @include desktopS {
+               margin-left: 16px;
+            }
+           
         }
-        &::after{
-            content: '';
-            display: block;
-            height: 100%;
-            width: 40px;
-            position: absolute;
-            right: -10px;
+        &::after {
+            right: -11px;
+            @include arrow('left');
             background: $color-white;
-            clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
+            z-index: 0;
+      
         }
-        &::before{
+        &::before {
+            @include arrow('right');
+            width: 47px;
+            left: -20px;
             z-index: 1;
-            content: '';
-            display: block;
-            height: 100%;
-            width: 40px;
-            position: absolute;
-            left: -15px;
             background: $color-green;
-            clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
         }
-        @include desktopM{
-        
-           }
+        @include desktopS {
+            width: 88%;
+        }
+        @include laptopL{
+            height: 25px;
+        }
     }
-    &__level{
+    &__level {
         height: 100%;
         min-width: 1.375rem;
         padding: 0 0.375rem;
@@ -152,7 +158,7 @@
         position: relative;
         z-index: 1;
     }
-    &__lastVisit{
+    &__lastVisit {
         display: flex;
         align-items: center;
         justify-content: flex-end;
@@ -163,26 +169,35 @@
         z-index: 0;
         width: 94%;
         margin-left: 9px;
-    
-     
-        &::after{
-            content: "";
-            z-index: -1;
-            display: block;
-            height: 100%;
-            width: 40px;
-            position: absolute;
+
+        &::after {
+            @include arrow('left');
             left: -10px;
             background: $color-white;
-            clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
+            @include desktopM {
+                left: -8px;
+            }
+            @include desktopS {
+                left: -10px;
+            }
+            @include laptopL {
+                left: -8px;
+            }
         }
-        img{
+        img {
             margin-left: 3px;
             margin-right: -2px;
+            @include desktopM{
+                margin-right: -1px;
+            }
         }
-        @include desktopM{
-           
-           }
+       
+        @include laptopL{
+            margin-left: 8px;
+        }
+        @include laptopL{
+            height: 25px;
+        }
     }
 }
 .searchFriend__list {
@@ -201,35 +216,37 @@
     table {
         width: 100%;
         border-collapse: collapse;
-        table-layout:fixed;
-        td, th{
+        table-layout: fixed;
+        td,
+        th {
             overflow: hidden;
             display: inline-block;
             white-space: nowrap;
             padding: 1px;
         }
-        tr{
-            th:first-child, td:first-child{
+        tr {
+            th:first-child,
+            td:first-child {
                 width: 26%;
-               
             }
-            th:nth-child(2), td:nth-child(2){
+            th:nth-child(2),
+            td:nth-child(2) {
                 width: 48%;
             }
-            th:last-child, td:last-child{
+            th:last-child,
+            td:last-child {
                 width: 26%;
-               
             }
         }
     }
     thead {
         border-bottom: 6px solid $color-blue;
-        th{
+        th {
             font-size: 1.563rem;
             font-weight: bold;
             letter-spacing: 0.125rem;
             border-right: 6px solid $color-gray_dark;
-            &:last-child{
+            &:last-child {
                 border-right: none;
             }
         }
@@ -241,19 +258,25 @@
             &:hover {
                 cursor: pointer;
                 border-bottom: 5px solid $color-gold;
+                @include laptopL {
+                    border-bottom: 3px solid $color-gold;
+                }
             }
-          
+            @include laptopL {
+                height: 32px;
+            }
         }
         td {
             text-align: center;
             vertical-align: middle;
         }
-        tr img{
+        tr img {
             height: 100%;
             width: auto;
             border-radius: 50%;
         }
     }
+    @include laptopL {
+        height: calc(100% - 42px);
+    }
 }
-
-
