--- a/sass/elements/game/_guard.scss
+++ b/sass/elements/game/_guard.scss
@@ -34,6 +34,9 @@
         &:hover {
             backdrop-filter: blur(4px);
         }
+        @include laptopL {
+            padding: 6px;
+        }
     }
     &__kingWrapper {
         width: 35%;
@@ -56,6 +59,9 @@
         text-transform: uppercase;
         color: $color-gold;
         -webkit-text-stroke: 1px $color-black;
+        @include desktopS {
+            font-size: 36px;
+        }
     }
     &__text {
         font-size: 1.25rem;
@@ -66,6 +72,9 @@
         display: flex;
         align-items: center;
         margin-top: 41px;
+        @include laptopL {
+            margin-top: 36px;
+        }
     }
 
     &__awardIcon {
@@ -122,25 +131,22 @@
         justify-content: center;
         align-items: center;
         height: calc(100% - 131px);
-        @include desktopS{
+        @include desktopS {
             height: calc(100% - 120px);
         }
     }
-    &__summary{
+    &__summary {
         padding: 15px;
         background: rgba(255, 255, 255, 0.6);
         backdrop-filter: blur(4px);
         border-radius: 25px;
-    
-
     }
-    &__summaryIcon{
+    &__summaryIcon {
         height: 190px;
         width: auto;
         object-fit: cover;
     }
-    &__summaryTitle{
-    
+    &__summaryTitle {
         font-size: 1.5rem;
         font-weight: 700;
         letter-spacing: 0.125rem;
@@ -149,7 +155,7 @@
         color: $color-white;
         text-shadow: 0.125rem 0.125rem $color-gold;
     }
-    &__summaryPayout{
+    &__summaryPayout {
         display: block;
         text-align: center;
         font-size: 2.063rem;
@@ -159,7 +165,7 @@
         color: $color-gold;
         text-shadow: 0.125rem 0.125rem $color-blue;
     }
-    &__summaryBtn{
+    &__summaryBtn {
         display: block;
         margin: 0.5rem auto;
         font-size: 1.375rem;
@@ -175,12 +181,11 @@
         transition: 0.2s;
         letter-spacing: 0.068rem;
         transition: 0.2s;
-        &:hover{
+        &:hover {
             letter-spacing: 0.188rem;
             cursor: pointer;
         }
     }
-   
 }
 .guard-menu {
     .range {
@@ -188,7 +193,7 @@
         height: 80px;
         width: 100%;
     }
-    .rangeIcon{
+    .rangeIcon {
         position: absolute;
         appearance: none;
         left: 0;
@@ -198,6 +203,10 @@
         background-size: 100% 100%;
         transform: translateY(-1px);
         z-index: 3;
+        @include desktopM {
+            width: 46px;
+            height: 46px;
+        }
     }
     .field {
         position: relative;
@@ -215,30 +224,32 @@
             appearance: none;
             width: 100%;
             border: none;
-            &::-webkit-slider-thumb{
+            &::-webkit-slider-thumb {
                 appearance: none;
                 background: none;
                 border: none;
                 height: 50px;
                 width: 50px;
             }
-            &::-moz-range-thumb{
+            &::-moz-range-thumb {
                 appearance: none;
                 background: none;
                 border: none;
                 height: 50px;
                 width: 50px;
             }
-            &::-ms-thumb{
+            &::-ms-thumb {
                 appearance: none;
                 height: 50px;
-                width: 50px; 
+                width: 50px;
                 appearance: none;
                 background: none;
                 border: none;
             }
         }
-      
+        @include desktopS {
+            height: 25px;
+        }
     }
     .value {
         position: absolute;
@@ -281,6 +292,13 @@
                 border-top-right-radius: 50%;
                 border-bottom-left-radius: 50%;
                 border: 3px solid #53433f;
+                @include desktopS {
+                    width: 35px;
+                    height: 35px;
+                }
+            }
+            @include desktopS {
+                line-height: 3.2rem;
             }
         }
     }
@@ -293,7 +311,7 @@
         }
     }
 }
-.progressBar{
+.progressBar {
     z-index: -1;
     display: block;
     background: $color-gold;
@@ -303,47 +321,46 @@
     position: absolute;
     border-radius: 40px;
     height: 30px;
-
 }
-.progressBar-1{
+.progressBar-1 {
     width: 8%;
 }
-.progressBar-2{
+.progressBar-2 {
     width: 18%;
 }
-.progressBar-3{
+.progressBar-3 {
     width: 28%;
 }
-.progressBar-4{
+.progressBar-4 {
     width: 38%;
 }
-.progressBar-5{
+.progressBar-5 {
     width: 48%;
 }
-.progressBar-6{
+.progressBar-6 {
     width: 59%;
 }
 
-.progressBar-7{
+.progressBar-7 {
     width: 68%;
 }
-.progressBar-8{
+.progressBar-8 {
     width: 78%;
 }
-.progressBar-9{
+.progressBar-9 {
     width: 90%;
 }
-.progressBar-10{
+.progressBar-10 {
     width: 100%;
 }
-@keyframes an_guardCountdownBar{
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+@keyframes an_guardCountdownBar {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
