--- a/sass/elements/game/_missions.scss
+++ b/sass/elements/game/_missions.scss
@@ -56,6 +56,10 @@
         font-size: 45px;
         font-weight: bold;
         letter-spacing: 0.125rem;
+        @include laptopL {
+            margin-top: 20px;
+            font-size: 32px;
+        }
     }
 
     &__papyrus {
@@ -66,6 +70,9 @@
         &:hover {
             transform: scale(105%);
             cursor: pointer;
+        }
+        @include laptopL {
+            width: 17%;
         }
     }
     &__willingnessBarWrapper {
@@ -176,6 +183,11 @@
         padding: 0 41px;
         padding-top: 0.75rem;
         font-family: $fontFamily-medivalSharp;
+        @include desktopS {
+            width: 76%;
+            padding: 0 24px;
+            box-shadow: -27px 0 #f7dab4 inset;
+        }
     }
     &__general {
         display: flex;
@@ -274,6 +286,14 @@
         height: 50px;
         width: 30px;
         background: #e4b052;
+        @include desktopS {
+            height: 43px;
+            width: 24px;
+        }
+        @include laptopL {
+            height: 35px;
+            width: 22px;
+        }
     }
     &::before {
         border-radius: 15px 0 0 15px;
@@ -282,5 +302,12 @@
     &::after {
         border-radius: 0 15px 15px 0;
         right: 21px;
+    }
+    @include desktopS {
+        height: 21px;
+        box-shadow: -64px 0 #b27a49 inset;
+    }
+    @include laptopL {
+        height: 17px;
     }
 }
