--- a/sass/elements/game/_general.scss
+++ b/sass/elements/game/_general.scss
@@ -18,6 +18,11 @@
         min-height: 600px;
         max-height: 768px;
     }
+    @include laptopM {
+        width: 1280px;
+        min-height: 520px;
+        max-height: 720px;
+    }
 }
 .game__contentContainer{
     width: 80%;
