--- a/sass/elements/game/_chat.scss
+++ b/sass/elements/game/_chat.scss
@@ -15,6 +15,9 @@
             height: 30px;
             border-bottom: 3px solid $color-blue;
         }
+        @include laptopM{
+            height: 27px;
+        }
     }
     &__friendNick {
         font-size: 1.375rem;
@@ -52,6 +55,7 @@
         @include desktopS {
             height: calc(100% - 67px);
         }
+       
     }
     &__botBar {
         position: relative;
@@ -126,7 +130,7 @@
         max-height: 400px;
         padding: 5px 19px;
         border: 2px solid $color-gray_dark;
-
+        
         img {
             display: inline-block;
             width: 1.188rem;
@@ -142,7 +146,7 @@
     &__btn {
         height: 27px;
         background: $color-blue;
-        font-size: 20px;
+        font-size: 1.25rem;
         border-radius: 20px;
         border: none;
         outline: none;
@@ -158,7 +162,9 @@
         &:focus {
             letter-spacing: 0.125rem;
         }
-        
+        @include desktopS {
+            height: 22px;
+        }
     }
     &__emojiContainer {
         z-index: 2;
@@ -182,6 +188,9 @@
     margin-top: 0.5rem;
     display: flex;
     padding: 2px 10px;
+    @include desktopM {
+        padding: 1px 6px;
+    }
     &__portraitWrapper {
         width: 10%;
     }
@@ -203,6 +212,9 @@
         }
         @include desktopS {
             height: 52px;
+        }
+        @include laptopM {
+            height: 47px;
         }
     }
     &__date {
@@ -232,6 +244,9 @@
         };
         @include desktopS{
             font-size: 8px;
+        }
+        @include laptopM {
+            font-size: 7px;
         }
     }
     &__nick {
