--- a/sass/elements/game/_friends.scss
+++ b/sass/elements/game/_friends.scss
@@ -33,6 +33,9 @@
             height: 40px;
             padding: 6px;
         }
+        @include laptopM {
+            height: 33px;
+        }
     }
     &__searchWrapper {
         display: flex;
@@ -89,8 +92,8 @@
     }
     &__settingsForm {
         position: absolute;
-        top: 81px;
-        right: 70px;
+        top: 60px;
+        right: 63px;
         width: 314px;
         padding: 13px;
         box-sizing: border-box;
@@ -98,7 +101,19 @@
         background: $color-gray-dark;
         border: 3px solid #e80054;
         z-index: 3;
+        @include desktopS {
+            top: 55px;
+            right: 62px;
+        }
+        @include laptopL {
+            width: 209px;
+            padding: 6px;
 
+        }
+        @include laptopM {
+            top: 49px;
+            right: 48px;
+        }
         &::after {
             content: "";
             position: absolute;
@@ -123,27 +138,37 @@
                 top: -15px;
                 right: -15px;
             }
+            @include laptopM {
+                width: 17px;
+                height: 17px;
+                top: -13px;
+                right: -13px;
+            }
         }
 
         &-filter {
-            right: 33px;
+            right: 25px;
             border: 3px solid #ffdc00;
             width: 378px;
             &::after {
                 background: #ffdc00;
             }
             @include desktopS {
-                top: 48px;
-                right: 23px;
+                top: 55px;
+                right: 24px;
+            }
+            @include laptopL {
+                width: 287px;
+            }
+            @include laptopM {
+                top: 47px;
+                right: 20px;
             }
         }
         @include desktopM {
             padding: 9px;  
         }
-        @include desktopS {
-            top: 48px;
-            right: 62px;
-        }
+      
     }
     &__list {
         box-sizing: border-box;
@@ -182,6 +207,9 @@
         @include laptopL {
             height: 280px;
         }
+        @include laptopM {
+            height: 240px;
+        }
     }
 }
 
@@ -197,6 +225,9 @@
     overflow: hidden;
     @include laptopL{
         padding-top: 7px;
+    }
+    @include laptopM {
+        width: 90%;
     }
     &:hover {
         backdrop-filter: blur(4px);
@@ -221,12 +252,30 @@
          @include laptopL{
              height: 190px;
          }
+         @include laptopM {
+             height: 160px;
+         }
+         
     }
     &__portrait {
         width: 50%;
         margin-bottom: 44px;
         height: auto;
         object-fit: cover;
+        @include desktopM {
+            margin-bottom: 37px;
+        }
+        @include desktopS {
+            margin-bottom: 32px;
+        }
+        @include laptopL {
+            margin-bottom: 27px;
+        }
+        @include laptopM {
+            margin-bottom: 23px;
+            width: 46%;
+        }
+        
     }
     &__name {
         margin-top: 6px;
@@ -237,6 +286,9 @@
         color: $color-white;
         @include desktopM {
             padding: 0.25rem 0;
+         }
+         @include laptopM {
+          margin-top: 2px;
          }
     }
     &__levelWrapper {
@@ -260,6 +312,9 @@
              height: 36px;
              padding: 2px 0;
          }
+         @include laptopM {
+             height: 30px;
+         }
     }
     &__actionBtn {
         display: flex;
@@ -275,9 +330,15 @@
         }
         &-profile {
             text-shadow: 0.125rem 0.125rem #e80054;
+            @include laptopL {
+              //  text-shadow: 0.065rem 0.065rem #e80054;
+            }
         }
         &-chat {
             text-shadow: 0.125rem 0.125rem #fdd33a;
+            @include laptopL {
+               // text-shadow:  0.125rem 0.095rem #fdd33a;
+            }
         }
     }
     &__icon {
@@ -291,6 +352,9 @@
         }
         @include laptopL{
             height: 27px;
+        }
+        @include laptopM {
+            height: 22px;
         }
     }
 }
@@ -336,6 +400,13 @@
 }
 #friends_branch {
     border-left: 6px solid $color-gray-dark;
+    overflow: auto;
+    &::-webkit-scrollbar{
+        width: 0;
+    }
+    @include desktopM {
+        border-left: 4px solid $color-gray-dark;
+    }
 }
 
 .friends__checkboxWrapper-highestLevel {
